New dashboard home page
  - New layout and more information displayed on home page
  - New `metrics.service` for the logic shared between account home and dashboard home around chart data
  - Improve line charts
    - add unit on y-axis
    - remove first grid line which was cut on top of the chart
    - display the y-axis text on top of grid lines

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -254,6 +254,34 @@
 	"billing.without_vat": "Preus sense IVA",
 	"confirm.delete_body": "Eliminar recurs",
 	"confirm.delete_title": "Segur que vols eliminar el recurs?",
+	"dashboard-home.desktop.available-for": "Disponible per a Windows, Mac i Linux",
+	"dashboard-home.desktop.description": "La manera més fàcil i ràpida de carregar dades a Nuclia des de (gairebé) qualsevol font de dades",
+	"dashboard-home.desktop.open": "Obriu Nuclia Desktop",
+	"dashboard-home.go-to.kb-settings": "Aneu a la configuració del quadre de coneixement",
+	"dashboard-home.go-to.pending-list": "Aneu a la llista de recursos pendents de processar",
+	"dashboard-home.go-to.resource-list": "Aneu a la llista de recursos",
+	"dashboard-home.kb-content.latest-resources.no-upload": "Encara no s'ha penjat cap recurs",
+	"dashboard-home.kb-content.latest-resources.title": "Últims recursos processats",
+	"dashboard-home.kb-content.processing-queue.no-pending": "No hi ha cap recurs pendent de processar",
+	"dashboard-home.kb-content.processing-queue.pending": "{{count}} recursos estan pendents de processar.",
+	"dashboard-home.kb-content.processing-queue.title": "Cua de processament",
+	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
+	"dashboard-home.kb-details.language-model": "Model lingüístic aplicat",
+	"dashboard-home.kb-details.slug": "Knowledge Box slug",
+	"dashboard-home.kb-details.title": "Detalls de la Knowledge Box ",
+	"dashboard-home.kb-details.uid": "Knowledge Box UID",
+	"dashboard-home.kb-metrics.title": "Contingut de la Knowledge Box",
+	"dashboard-home.kb-metrics.total.fields": "Camps",
+	"dashboard-home.kb-metrics.total.paragraphs": "Blocs de text",
+	"dashboard-home.kb-metrics.total.sentences": "Vectors",
+	"dashboard-home.kb-metrics.total.title": "Recursos",
+	"dashboard-home.state.private": "Knowledge Box privats",
+	"dashboard-home.state.published": "Knowledge Box públic",
+	"dashboard-home.upload-block.description": "Carregueu fitxers, carpetes, enllaços",
+	"dashboard-home.upload-block.description-desktop": " o trieu una font per treballar amb Nuclia amb la vostra pròpia base de dades.",
+	"dashboard-home.upload-block.title": "Treballa amb les teves dades",
+	"dashboard-home.usage.fullscreen": "Mostra el gràfic a pantalla completa",
+	"dashboard-home.usage.title": "Ús",
 	"dataset.delete": "Suprimeix la mostra",
 	"dataset.delete_failed": "No s'ha pogut suprimir el conjunt de dades de mostra",
 	"dataset.delete_in_progress": "S'està suprimint el conjunt de dades de mostra",
@@ -464,6 +492,13 @@
 	"language.ru": "Rus",
 	"language.sv": "Suec",
 	"language.tr": "Turc",
+	"metrics.answers.title": "Respostes generatives",
+	"metrics.period.last-12-months": "Últims 12 mesos",
+	"metrics.period.last-30-days": "Últims 30 dies",
+	"metrics.processing.title": "Temps de processament",
+	"metrics.search.title": "Consultes de cerca",
+	"metrics.units.hours": "Hores",
+	"metrics.units.queries": "Consultes",
 	"modal.create_link.csv-file": "Enllaços d'un fitxer CSV",
 	"modal.create_link.link-to.file": "un fitxer en línia",
 	"modal.create_link.link-to.label": "Enllaç a:",
@@ -683,6 +718,7 @@
 	"sidenav.api_keys": "Tecles API",
 	"sidenav.billing": "Pagament",
 	"sidenav.classification": "Conjunts d'etiquetes",
+	"sidenav.home": "Inici",
 	"sidenav.list": "Llistat recursos",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Tecles NUA",
@@ -754,11 +790,6 @@
 	"stash.description": "Descipció",
 	"stash.email": "Servidor de correu",
 	"stash.empty_kb": "La Knowledge Box encara està buida!",
-	"stash.enable_stash_email": "Habilitar correu electrònic",
-	"stash.home.link": "Inici",
-	"stash.home.upload-block.description": "Carregueu fitxers, carpetes, enllaços",
-	"stash.home.upload-block.description-desktop": " o trieu una font per treballar amb Nuclia amb la vostra pròpia base de dades.",
-	"stash.home.upload-block.title": "Treballa amb les teves dades",
 	"stash.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar a la Knowledge Box.",
 	"stash.kb_name_invalid": "El nom de la Knowledge Box no és vàlid",
 	"stash.kb_slug_invalid": "El slug de la caixa de coneixement no és vàlid",
@@ -803,9 +834,9 @@
 	"stash.settings.processes.training.start": "Comença a entrenar",
 	"stash.settings.processes.training.stop": "Deixa d'entrenar",
 	"stash.settings.processes.training.time_requirement": "El temps necessari per entrenar és d'unes {{hours}} hores que es restaran de les hores disponibles.",
-	"stash.state.label": "Estat: ",
-	"stash.state.private": "privat",
-	"stash.state.published": "públic",
+	"stash.settings.status.label": "Estat",
+	"stash.settings.status.private": "La Knowledge Box és <strong>privada</strong>",
+	"stash.settings.status.published": "La Knowledge Box és <strong>públic</strong>",
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
 	"stash.upload.desktop.description": "La manera més fàcil i ràpida de carregar dades a Nuclia des de les vostres fonts de dades",
@@ -829,14 +860,6 @@
 	"stash.valid_domains_label": "Dominis des d’on es pot enviar correu electrònic",
 	"stash.valid_emails": "Afegeix, separats per comes, els correus electrònics dels quals s’acceptarà correu electrònic",
 	"stash.valid_emails_label": "Correus electrònics",
-	"stats.endpoint": "NucliaDB API endpoint",
-	"stats.get_started": "Començar",
-	"stats.processing_time": "Temps de processament",
-	"stats.total.fields": "Camps",
-	"stats.total.paragraphs": "Blocs de text",
-	"stats.total.sentences": "Vectors",
-	"stats.total.title": "Recursos",
-	"stats.total_search": "Total d'operacions de cerca",
 	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
 	"synonyms.add-form.main-word-label": "Paraula principal",
 	"synonyms.add-form.synonyms-label": "Sinònims separats per comes",
