--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -255,6 +255,34 @@
 	"billing.without_vat": "Prices without VAT",
 	"confirm.delete_body": "Delete resource",
 	"confirm.delete_title": "Are you sure you want to delete this resource?",
+	"dashboard-home.desktop.available-for": "Available for Windows, Mac and Linux",
+	"dashboard-home.desktop.description": "The easiest and fastest way to upload data to Nuclia from (almost) any data-source",
+	"dashboard-home.desktop.open": "Open Nuclia Desktop",
+	"dashboard-home.go-to.kb-settings": "Go to Knowledge Box settings",
+	"dashboard-home.go-to.pending-list": "Go to pending to be processed resource list",
+	"dashboard-home.go-to.resource-list": "Go to resource list",
+	"dashboard-home.kb-content.latest-resources.no-upload": "No resource uploaded yet",
+	"dashboard-home.kb-content.latest-resources.title": "Latest resources processed",
+	"dashboard-home.kb-content.processing-queue.no-pending": "No resource pending to be processed",
+	"dashboard-home.kb-content.processing-queue.pending": "{{count}} resources are pending to be processed.",
+	"dashboard-home.kb-content.processing-queue.title": "Processing queue",
+	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
+	"dashboard-home.kb-details.language-model": "Language model applied",
+	"dashboard-home.kb-details.slug": "Knowledge Box slug",
+	"dashboard-home.kb-details.title": "Knowledge Box details",
+	"dashboard-home.kb-details.uid": "Knowledge Box UID",
+	"dashboard-home.kb-metrics.title": "Knowledge Box content",
+	"dashboard-home.kb-metrics.total.fields": "Fields",
+	"dashboard-home.kb-metrics.total.paragraphs": "Text blocks",
+	"dashboard-home.kb-metrics.total.sentences": "Vectors",
+	"dashboard-home.kb-metrics.total.title": "Resources",
+	"dashboard-home.state.private": "Private Knowledge Box",
+	"dashboard-home.state.published": "Public Knowledge Box",
+	"dashboard-home.upload-block.description": "Upload files, folders, links",
+	"dashboard-home.upload-block.description-desktop": " or choose a source to work with Nuclia with your own database.",
+	"dashboard-home.upload-block.title": "Work with your data",
+	"dashboard-home.usage.fullscreen": "Display chart in full screen",
+	"dashboard-home.usage.title": "Usage",
 	"dataset.delete": "Delete sample dataset",
 	"dataset.delete_failed": "Failed to delete sample dataset",
 	"dataset.delete_in_progress": "Deleting sample dataset",
@@ -465,6 +493,13 @@
 	"language.ru": "Russian",
 	"language.sv": "Swedish",
 	"language.tr": "Turkish",
+	"metrics.answers.title": "Generative answers",
+	"metrics.period.last-12-months": "Last 12 months",
+	"metrics.period.last-30-days": "Last 30 days",
+	"metrics.processing.title": "Processing time",
+	"metrics.search.title": "Search queries",
+	"metrics.units.hours": "Hours",
+	"metrics.units.queries": "Queries",
 	"modal.create_link.csv-file": "Links from a CSV file",
 	"modal.create_link.link-to.file": "an online file",
 	"modal.create_link.link-to.label": "Link to:",
@@ -684,6 +719,7 @@
 	"sidenav.api_keys": "API keys",
 	"sidenav.billing": "Payment",
 	"sidenav.classification": "Label sets",
+	"sidenav.home": "Home",
 	"sidenav.list": "Resources list",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "NUA keys",
@@ -755,11 +791,6 @@
 	"stash.description": "Description",
 	"stash.email": "Email server",
 	"stash.empty_kb": "The Knowledge Box is empty",
-	"stash.enable_stash_email": "Enable email",
-	"stash.home.link": "Home",
-	"stash.home.upload-block.description": "Upload files, folders, links",
-	"stash.home.upload-block.description-desktop": " or choose a source to work with Nuclia with your own database.",
-	"stash.home.upload-block.title": "Work with your data",
 	"stash.invited_user": "We have sent an invitation email to {{user}} to join this Knowledge Box. ",
 	"stash.kb_name_invalid": "Invalid Knowledge Box name",
 	"stash.kb_slug_invalid": "Invalid knowledge box slug",
@@ -804,9 +835,9 @@
 	"stash.settings.processes.training.start": "Start training",
 	"stash.settings.processes.training.stop": "Stop training",
 	"stash.settings.processes.training.time_requirement": "The time required to train is about {{hours}} hours which will be subtracted from the available hours.",
-	"stash.state.label": "State: ",
-	"stash.state.private": "private",
-	"stash.state.published": "public",
+	"stash.settings.status.label": "Status",
+	"stash.settings.status.private": "The Knowledge Box is <strong>private</strong>",
+	"stash.settings.status.published": "The Knowledge Box is <strong>public</strong>",
 	"stash.stats": "Data",
 	"stash.title": "Title of the box",
 	"stash.upload.desktop.description": "The easiest and fastest way to upload data to Nuclia from your data sources",
@@ -830,14 +861,6 @@
 	"stash.valid_domains_label": "Domains from which email can be sent",
 	"stash.valid_emails": "Add, separated by comas, the emails addresses from witch emails will be accepted. ",
 	"stash.valid_emails_label": "Emails",
-	"stats.endpoint": "NucliaDB API endpoint",
-	"stats.get_started": "Get started",
-	"stats.processing_time": "Processing time",
-	"stats.total.fields": "Fields",
-	"stats.total.paragraphs": "Text blocks",
-	"stats.total.sentences": "Vectors",
-	"stats.total.title": "Resources",
-	"stats.total_search": "Total search operations",
 	"synonyms.add-form.bidirectional-checkbox": "Bidirectional",
 	"synonyms.add-form.main-word-label": "Main word",
 	"synonyms.add-form.synonyms-label": "Synonyms separated by commas",
