[sc-8118]: Support resources without fields
- In the widget and the resource edit flow, don't crash when a resource doesn't have any field
- Fix layout bug: Resource list was visible behind the header when scrolling down

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -585,6 +585,7 @@
 	"resource.entities.time": "Time",
 	"resource.entities.work_of_art": "Art",
 	"resource.error.loading-failed": "Loading resources failed.",
+	"resource.error.no-field": "There is no field in this resource",
 	"resource.extra-metadata.invalid-json": "Invalid JSON",
 	"resource.extra-metadata.label": "Extra metadata",
 	"resource.failed_resources_popover": "Processing failed files",
