--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -585,6 +585,7 @@
 	"resource.entities.time": "Temps",
 	"resource.entities.work_of_art": "Art",
 	"resource.error.loading-failed": "Le chargement des ressources a échoué.",
+	"resource.error.no-field": "Il n'y a aucun champ dans cette ressource",
 	"resource.extra-metadata.invalid-json": "JSON invalide",
 	"resource.extra-metadata.label": "Métadonnées supplémentaires",
 	"resource.failed_resources_popover": "Traitement des fichiers ayant échoué",
