--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -584,6 +584,7 @@
 	"resource.entities.time": "Temps",
 	"resource.entities.work_of_art": "Obres",
 	"resource.error.loading-failed": "No s'han pogut carregar els recursos.",
+	"resource.error.no-field": "No hi ha cap camp en aquest recurs",
 	"resource.extra-metadata.invalid-json": "JSON no vàlid",
 	"resource.extra-metadata.label": "Metadades addicionals",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
