--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -917,6 +917,8 @@
 	"widget.generator.advanced.display-category.title": "Mostra",
 	"widget.generator.advanced.generative-answer-category.answers.help": "Genera resposta a les preguntes dels usuaris i permet xatejar amb el sistema",
 	"widget.generator.advanced.generative-answer-category.answers.label": "Generació de respostes",
+	"widget.generator.advanced.generative-answer-category.citations.help": "Mostra quines fonts s'han utilitzat per generar la resposta.",
+	"widget.generator.advanced.generative-answer-category.citations.label": "Citacions",
 	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Amaga les fonts utilitzades per generar la resposta",
 	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Amaga les fonts",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Els resultats de full text no s'utilitzaran per generar respostes",
